small label style, label gap fix at small size

--- a/src/style-SMALL_LABEL_ROUNDED.less
+++ b/src/style-SMALL_LABEL_ROUNDED.less
@@ -1,5 +1,6 @@
 .dyna-ui-field-wrapper {
 
+
 	&--style-SMALL_LABEL_ROUNDED {
 		@border-radius: 4px;
 		outline: none;
@@ -9,6 +10,7 @@
 			border: 1px solid;
 			border-radius: @border-radius @border-radius 0 0;
 			border-bottom-width: 0;
+			border-radius: @border-radius @border-radius 0 0;
 		}
 
 		.dyna-ui-field-wrapper-container {
@@ -46,7 +48,7 @@
 		&XSMALL,
 		&SMALL {
 			.dyna-ui-label {
-				padding: 0 6px;
+				padding: 1px 6px;
 				font-size: 12px;
 			}
 			.dyna-ui-field-wrapper-container {
